<resources>
    <string name="app_name">Book</string>
    <string name="first">First android application!</string>
    <string name="click">Click me!</string>
    <string name="fragment_1">This is fragment #1</string>
    <string name="fragment_2">This is fragment #2</string>
    <string name="get_text_in_fragment_1">Get text in Fragment#1</string>
    <string name="web_browser">Web Browser</string>
    <string name="make_calls">Make Calls</string>
    <string name="show_map">Show Map</string>
    <string name="launch_my_browser">Launch My Browser</string>
    <string name="details">Here are the details for notifications.</string>
    <string name="display_notification">Display Notification</string>
</resources>
