<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/btnMakeCalls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickMakeCalls"
        android:text="@string/make_calls" />

    <Button
        android:id="@+id/btn_webbrowser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickWebBrowser"
        android:text="@string/web_browser" />

    <Button
        android:id="@+id/btn_launchmybrowser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="onClickLaunchMyBrowser"
        android:text="@string/launch_my_browser" />

    <Button
        android:id="@+id/clickMe"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:onClick="onCilckClickMe"
        android:text="@string/click" />

    <Button
        android:id="@+id/btn_showMap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickShowMap"
        android:text="@string/show_map" />


</LinearLayout>